# gel

./: Cargo.toml  MANIFEST.in  gel  pyproject.toml  setup.py
.github/: Makefile
.github/workflows/: build.ls-nightly.yml  docs.yml  dryrun.yml  ls-nightly.yml  nightly.yml  release.yml  testing.yml  tests-ha.yml  tests-inplace.yml  tests-managed-pg.yml  tests-patches.yml  tests-pg-versions.yml  tests-pool.yml  tests-reflection.yml  tests.inplace.yml  tests.inplace7x.yml  tests.patches.yml  tests.yml
.github/workflows.src/: build.inc.yml  build.targets.yml  ls-build.inc.yml  tests-patches.tpl.yml  tests.inc.yml  tests.inplace.tpl.yml  tests.inplace7x.tpl.yml  tests.patches.tpl.yml  tests.tpl.yml
dev-notes/: concurrent-indexes.py
docs/: redirects.js
docs/cloud/: cli.rst  http_gql.rst  index.rst  migrate_from.rst  web.rst
docs/intro/: clients.rst  edgeql.rst  index.rst  installation.rst  localdev.rst  projects.rst
docs/reference/: connection.rst  index.rst
docs/resources/: index.rst  upgrading.rst
docs/stdlib/: bytes.rst
docs7/: pydantic.md  qb.md
edb/: _edgeql_parser.pyi  buildmeta.py
edb/api/: errors.txt
edb/cli/: __init__.py
edb/common/: _typing_inspect.py  adapter.py  asyncwatcher.py  checked.py  compiler.py  devmode.py  lru.py  ordered.py  ordered.pyi  parametric.py  parsing.py  retryloop.py  span.py  struct.py  supervisor.py  term.py  topological.py  typeutils.py
edb/schema/rust/: Cargo.toml
edb/schema/rust/src/: lib.rs  object_list.rs
rust/gel-config/: Cargo.toml  TODO.md
rust/gel-config/src/: lib.rs  python.rs
tests/: test_backend_connect.py  test_constraints.py  test_docs.py  test_dump_v4.py  test_dump_v5.py  test_edgeql_casts.py  test_edgeql_coalesce.py  test_edgeql_data_migration.py  test_edgeql_ddl.py  test_edgeql_expr_aliases.py  test_edgeql_expressions.py  test_edgeql_filter.py  test_edgeql_for.py  test_edgeql_fts.py  test_edgeql_functions.py  test_edgeql_functions_bitwise.py  test_edgeql_functions_inline.py  test_edgeql_globals.py  test_edgeql_group.py  test_edgeql_insert.py  test_edgeql_linkprops.py  test_edgeql_orderby.py  test_edgeql_permissions.py  test_edgeql_policies.py  test_edgeql_rewrites.py  test_edgeql_scope.py  test_edgeql_select.py  test_edgeql_sql_codegen.py  test_edgeql_syntax.py  test_edgeql_triggers.py  test_edgeql_update.py  test_edgeql_volatility.py  test_ext_ai.py  test_http_auth.py  test_http_ext_auth.py  test_http_ext_auth_otc.py  test_http_std_net.py  test_indexes.py  test_language_server.py  test_protocol.py  (+13 more)
(+480 files in other folders)
