[package]
name = "schema"
version = "0.1.0"
edition = "2024"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]

[lints]
workspace = true

[features]
python_extension = ["pyo3/extension-module"]
default = ["python_extension"]

[dependencies]
gel-schema = { git = "https://github.com/geldata/gel-rust.git", rev = "05032c45444b8786cc455cfd45a9797283123021" }
# gel-schema = { path = "/home/aljaz/Gel/gel-rust/gel-schema" }

pyo3 = { workspace = true, features = ["uuid"] }
tracing.workspace = true
uuid = "1"
bincode = { version = "1.3.3" }
indexmap = "2.12.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
